--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>타이틀이 제대로 나오나?</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="src/img/favicon.png">
+    <link rel="stylesheet" href="src/css/base.css">
+    <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/aside.css">
+    <title>네모장</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="src/js/main.js"></script>
+  </body>
 </html>
