Home Page Setting

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="src/img/favicon.png">
     <link rel="stylesheet" href="src/css/base.css">
-    <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/searchbar.css">
     <link rel="stylesheet" href="src/css/aside.css">
+    <link rel="stylesheet" href="src/css/home.css">
     <title>네모장</title>
   </head>
   <body>
