change name 'aside' -> 'nav'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="src/img/favicon.png">
     <link rel="stylesheet" href="src/css/base.css">
     <link rel="stylesheet" href="src/css/searchbar.css">
-    <link rel="stylesheet" href="src/css/aside.css">
+    <link rel="stylesheet" href="src/css/nav.css">
     <link rel="stylesheet" href="src/css/home.css">
     <title>네모장</title>
   </head>
