--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/js/main.js"></script>
+    <script type="module" src="./build/bundle.js"></script>
   </body>
 </html>
