--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="src/img/favicon.png">
-    <link rel="stylesheet" href="src/css/base.css">
-    <link rel="stylesheet" href="src/css/searchbar.css">
-    <link rel="stylesheet" href="src/css/nav.css">
-    <link rel="stylesheet" href="src/css/home.css">
-    <link rel="stylesheet" href="src/css/card.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="static/img/favicon.png">
+    <link rel="stylesheet" href="static/css/base.css">
+    <link rel="stylesheet" href="static/css/searchbar.css">
+    <link rel="stylesheet" href="static/css/nav.css">
+    <link rel="stylesheet" href="static/css/home.css">
+    <link rel="stylesheet" href="static/css/card.css">
     <title>네모장</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="./src/js/main.js"></script>
+    <div id="app"></div>sdf
+    <script type="module" src="./static/js/main.js"></script>
   </body>
 </html>
